// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Notification /> it renders Notification with type 1`] = `
<div
  className="mfui-beta-notification mfui-beta-notification_type_success"
>
  <div
    className="mfui-beta-notification__container"
  >
    <test-file-stub
      className="mfui-beta-notification__icon"
    />
    <Paragraph
      className="mfui-beta-notification__text"
      hasMargin={false}
    >
      Some test text
    </Paragraph>
  </div>
</div>
`;

exports[`<Notification /> it renders Notification without props 1`] = `
<div
  className="mfui-beta-notification mfui-beta-notification_type_success"
>
  <div
    className="mfui-beta-notification__container"
  >
    <test-file-stub
      className="mfui-beta-notification__icon"
    />
    <Paragraph
      className="mfui-beta-notification__text"
      hasMargin={false}
    >
      Some test text
    </Paragraph>
  </div>
</div>
`;

exports[`<Notification /> it renders short Notification 1`] = `
<div
  className="mfui-beta-notification mfui-beta-notification_type_success mfui-beta-notification_short"
>
  <div
    className="mfui-beta-notification__container"
  >
    <test-file-stub
      className="mfui-beta-notification__icon"
    />
    <Paragraph
      className="mfui-beta-notification__text"
      hasMargin={false}
    >
      Some test text
    </Paragraph>
  </div>
</div>
`;
